<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.SignupActivity">
        <include
            android:id="@+id/toolbar"
            layout="@layout/common_toolbar"
            app:layout_constraintTop_toTopOf="parent" />
        <ScrollView
            android:id="@+id/container_signup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <LinearLayout
                android:layout_width="268dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:padding="6dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:layout_marginStart="6dp"
                    android:padding="6dp"
                    android:text="@string/signup_login_title" />
                <EditText
                    android:textSize="@dimen/font_size_small"
                    android:id="@+id/et_id"
                    android:layout_width="240dp"
                    android:layout_height="48dp"
                    android:hint="@string/signup_id"
                    android:padding="12dp"
                    android:layout_marginBottom="6dp"
                    android:maxLines="1"
                    android:layout_gravity="center"
                    android:background="@drawable/edittext_rounded_corner_rectangle"
                    android:inputType="textEmailAddress" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:padding="6dp"
                    android:text="@string/signup_nickname_title" />
                <EditText
                    android:id="@+id/et_nick_name"
                    android:textSize="@dimen/font_size_small"
                    android:layout_width="240dp"
                    android:layout_height="48dp"
                    android:padding="12dp"
                    android:inputType="text"
                    android:layout_gravity="center"
                    android:layout_marginBottom="6dp"
                    android:background="@drawable/edittext_rounded_corner_rectangle"
                    android:hint="@string/signup_nickname"
                    android:maxLines="1" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:padding="6dp"
                    android:text="@string/signup_pw_title" />
                <EditText
                    android:id="@+id/et_password"
                    android:textSize="@dimen/font_size_small"
                    android:layout_width="240dp"
                    android:layout_height="48dp"
                    android:padding="12dp"
                    android:inputType="textPassword"
                    android:layout_gravity="center"
                    android:layout_marginBottom="6dp"
                    android:background="@drawable/edittext_rounded_corner_rectangle"
                    android:hint="@string/signup_pw"
                    android:maxLines="1"
                    tools:text="muang59!@"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:padding="6dp"
                    android:text="@string/signup_pw_check_title" />
                <EditText
                    android:id="@+id/et_password_check"
                    android:textSize="@dimen/font_size_small"
                    android:layout_width="240dp"
                    android:layout_height="48dp"
                    android:padding="12dp"
                    android:inputType="textPassword"
                    android:layout_gravity="center"
                    android:layout_marginBottom="6dp"
                    android:background="@drawable/edittext_rounded_corner_rectangle"
                    android:hint="@string/signup_pw_check"
                    android:maxLines="1"
                    tools:text="muang59!@" />
                <CheckBox
                    android:id="@+id/cb_auto_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_auto_login"
                    android:layout_marginEnd="12dp"
                    android:layout_marginBottom="28dp"
                    android:layout_gravity="end" />

            </LinearLayout>
        </ScrollView>


        <LinearLayout
            android:id="@+id/lo_nav"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/tv_return"
                android:layout_width="0dp"
                android:layout_height="44dp"
                android:layout_weight="1"
                android:background="@color/app_view_background_light"
                android:text="@string/signup_return"
                android:gravity="center"
                android:textSize="@dimen/font_size_normal"
                android:foreground="?attr/selectableItemBackground"
                android:textColor="@color/black_light_40"
                android:clickable="true"
                android:focusable="true"/>

            <TextView
                android:id="@+id/tv_signup"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="44dp"
                android:background="@drawable/allow_button"
                android:foreground="?attr/selectableItemBackground"
                android:text="@string/signup_signup"
                android:gravity="center"
                android:textSize="@dimen/font_size_normal"
                android:textColor="@color/white"
                android:clickable="true"
                android:focusable="true"/>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>